--- a/portfolio.html
+++ b/portfolio.html
@@ -236,6 +236,17 @@
               </li>
           </ul>
       </div>
+      <div class="footer-subscription">
+        <p class="footer-subscription-title">Подпишитесь на рассылку</p>
+        <form class="footer-form">
+            <input form="email" class="footer-form-input" placeholder="E-mail">
+            <button type="submit" class="footer-form-button">Подписаться
+                <svg class="footer-form-icon">
+                    <use href="./images/sprite.svg#icon-icon-send"> </use>
+                         </svg>
+            </button>
+        </form>
+    </div>
       </div>
   </footer>
 </body>
