--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css" integrity="sha512-Zx6MlUMKSVJoQ+83OwhdILe8cSEsCzfqThJd7J/VA2UrK6Ctj85p+xzqfyuNXE5B1k25uUdmJ2OzItbBy9GHAQ=="иcrossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css" integrity="sha512-Zx6MlUMKSVJoQ+83OwhdILe8cSEsCzfqThJd7J/VA2UrK6Ctj85p+xzqfyuNXE5B1k25uUdmJ2OzItbBy9GHAQ==" crossorigin="anonymous"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css"
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -251,7 +251,7 @@
                         <li class="team-social-item">
                             <a class="team-social-link" href="#">
                             <svg class="team-social-icon">
-                        <use href="./images/sprite.svg#icon-instagram-2" w> </use>
+                        <use href="./images/sprite.svg#icon-instagram-2"> </use>
                              </svg>
                             </a>
                         </li>
@@ -394,7 +394,7 @@
         <div class="footer-subscription">
             <p class="footer-subscription-title">Подпишитесь на рассылку</p>
             <form class="footer-form">
-                <input form="email" class="footer-form-input" placeholder="E-mail">
+                <input type="email" class="footer-form-input" placeholder="E-mail">
                 <button type="submit" class="footer-form-button">Подписаться
                     <svg class="footer-form-icon">
                         <use href="./images/sprite.svg#icon-icon-send"> </use>
