--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                 <p class="modal-form-title">Оставьте свои данные, мы вам перезвоним</p>
 
                <label class="modal-form-input-label">
-                   Имя
+                   <span class="modal-form-input-name">Имя</span>
                    <span class="modal-form-input-wrapper">
                <input type="text" name="user-name" class="modal-form-input">
                <svg class="modal-form-icon">
@@ -427,7 +427,7 @@
                     </label>
 
                <label class="modal-form-input-label">
-                   Телефон
+                   <span class="modal-form-input-name">Телефон</span>
                    <span class="modal-form-input-wrapper">
                <input type="tel" name="user-phone" class="modal-form-input">
                <svg class="modal-form-icon">
@@ -437,7 +437,7 @@
                     </label>
 
                <label class="modal-form-input-label">
-                   Почта
+                   <span class="modal-form-input-name">Почта</span>
                    <span class="modal-form-input-wrapper">
                <input type="email" name="user-mail" class="modal-form-input">
                <svg class="modal-form-icon">
@@ -447,7 +447,7 @@
                     </label>
 
                <label class="modal-form-input-label">
-                   Комментарий
+                   <span class="modal-form-input-name">Комментарий</span>
                <textarea name="user-message" class="modal-form-message" placeholder="Введите текст"></textarea>
                    </label>
 
@@ -455,7 +455,7 @@
                <label for="policy-check" class="modal-form-label-policy">
                    Соглашаюсь с рассылкой и принимаю <a href="#">Условия договора</a>
             </label>
-            
+
                <button class="modal-form-button" type="submit">Отправить</button>
             </form>
         </div>
